--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/rounak.amre/viz/VideoGameSalesVisualized/VideoGamesSalesDashboard">Academic Project<br />
-										ANOVA</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/rounak.amre/viz/VideoGameSalesVisualized/VideoGamesSalesDashboard">Video Game<br />
+										Sales Visualization</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/rounak.amre/viz/VideoGameSalesVisualized/VideoGamesSalesDashboard" class="image fit"><img src="images/VideoGameSales.png" alt="" /></a>
 									<p>Insightful dashboard visualization of Video Game sales data with respect to Genre, Platform, Publishers and sales growth over the years.</p>
